# oFono

./: .gitignore  .mailmap  AUTHORS  HACKING  Makefile.am  README  TODO  configure.ac
doc/: architecture.txt  consumer.txt  manager-api.txt  message-api.txt  service-api.txt  standards.txt  storage.txt
gweb/: gresolv.c  gweb.c
plugins/: ofono.c
src/: dbus.c  dbus.h  genbuiltin  log.c  log.h  main.c  mms.h  mmsutil.c  mmsutil.h  plugin.c  plugin.h  push.c  push.h  service.c  service.h  store.c  store.h  types.h  wsputil.c  wsputil.h
test/: delete-message  get-conversation  get-messages  get-services  list-services  mark-message-read  monitor-mms  send-message  set-use-delivery-reports
tools/: create-hex-array.c  decode-mms.c
unit/: ni-mms-1-3-con-271.mms  ni-mms-1-3-con-272.mms  rc-mms-1-3-con-210.mms  rc-mms-1-3-con-211.mms  rc-mms-1-3-con-212.mms  rc-mms-1-3-con-213.mms  rc-mms-1-3-con-214.mms  rc-mms-1-3-con-216.mms  rc-mms-1-3-con-220.mms  rc-mms-1-3-con-224.mms  rc-mms-1-3-con-228.mms  rc-mms-1-3-con-271.mms  rc-mms-1-3-con-281.mms  rc-mms-1-3-con-282.mms  sr-mms-mixed.mms  sr-mms-related-multi-to.mms  test-mmsutil.c  test-wsputil.c
